syntax = "proto3";

package rivet.backend.pkg.cdn.version_publish;

import "proto/common.proto";
import "proto/backend/cdn.proto";

message Request {
	rivet.common.Uuid version_id = 1;
	rivet.backend.cdn.VersionConfig config = 2;
	rivet.backend.cdn.VersionConfigCtx config_ctx = 3;
}

message Response {

}
